fix action sheet container overflowing

--- a/web/src/action-sheet/action-sheet.styl
+++ b/web/src/action-sheet/action-sheet.styl
@@ -2,6 +2,7 @@
   background: rgba(0, 0, 0, 0.7);
   @extend .fill-container;
   opacity: 0.01;
+  overflow: hidden;
   z-index: -1;
 
   .container {
